# Compression

./: CMakeLists.txt  Findasio.cmake  main_code.cpp
.github/workflows/: main.yml
